// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main empty render correctly 1`] = `
<main
  className="page__main page__main--index page__main--index-empty"
>
  <h1
    className="visually-hidden"
  >
    Cities
  </h1>
</main>
`;

exports[`Main render correctly 1`] = `
<main
  className="page__main page__main--index "
>
  <h1
    className="visually-hidden"
  >
    Cities
  </h1>
</main>
`;
